# scripts

./: .gitignore  README.md
corpus/llm-jp-corpus-v4/ja/ja_warp_pdf/: .gitignore  README.md  pyproject.toml
corpus/llm-jp-corpus-v4/ja/ja_warp_pdf/examples/: example.jsonl
corpus/llm-jp-corpus-v4/ja/ja_warp_pdf/scripts/: convert.py  filter.py  launch.py  test_convert.py
pretrain/scripts/v3-cpt-instruct/: README.md  pyproject.toml
pretrain/scripts/v3-cpt-instruct/converter/: convert.sh  run_all.sh
pretrain/scripts/v3-cpt-instruct/installer/: install_tokenizer_scripts.sh
pretrain/scripts/v3-cpt-instruct/preprocess/: tokenize_instruction-pretraining.sh  tokenize_japanese-cosmopedia.sh
pretrain/scripts/v3-cpt-instruct/src/v3_cpt_instruct/: __init__.py
pretrain/scripts/v3-cpt-instruct/train/: run_train.sh  sbatch.sh  train_1.8b.sh  train_1.8b_lr1.5.sh  train_13b.sh  train_3.7b.sh  train_7.2b.sh
pretrain/scripts/v3-cpt-instruct/tuning/: dataset.py  hf_to_nemo.py  hf_to_nemo.sh  install.sh  nemo_to_hf.py  nemo_to_hf.sh  requirements_cuda12.txt  run_all.sh  run_hf_to_nemo.sh  run_nemo_to_hf.sh  run_train.sh  train.sh  train_sft.py
pretrain/scripts/v3-cpt-instruct/tuning/configs/: base.yaml  sft.yaml
pretrain/scripts/v3-cpt-instruct/tuning/configs/exp_manager/: sft.yaml
pretrain/scripts/v3-cpt-instruct/tuning/configs/model/: llm-jp-3-1.8b.yaml  llm-jp-3-13b.yaml  llm-jp-3-172b.yaml  llm-jp-3-3.7b.yaml
pretrain/scripts/v3-cpt-instruct/tuning/convert_configs/: llm-jp-3-1.8b.yaml  llm-jp-3-13b.yaml  llm-jp-3-172b.yaml  llm-jp-3-3.7b.yaml  llm-jp-3-7.2b.yaml
(+801 files in other folders)
