[project]
name = "v3-cpt-instruct"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "odashi", email = "yusuke.oda@predicate.jp" }
]
dependencies = [
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
